# two_tower_recmodel

grocery/: README.md  pyproject.toml
grocery/src/grocery/metrics/: __init__.py  aspects.py  base.py  quality.py
grocery/src/grocery/models/: __init__.py  als.py
grocery/src/grocery/recommender/: __init__.py  candidates.py  features.py  primitives.py  recommender.py  reranking.py
grocery/src/grocery/utils/: __init__.py  dataset.py  viewer.py
notebooks/: requirements.txt  two_tower_rank_model.ipynb
